# Civis

./: .coderabbit.yaml  .coverage  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .runsettings  404.html  6996a694-915c-8321-81f9-e3915596cb1e.html  ADR.md  AGENTS.md  AGENT_INBOX.md  AGILE_WORKSTREAM.html  ALPHA_WIRE_FACTS.md  ARTIFACT_TREE.html  CHANGELOG.html  CHANGELOG.md  CHARTER.md  CITATION.cff  CIVIS_GAME_DAG.md  CLAUDE.html  CLAUDE.md  CODE_COMPARISON.md  COMPARISON.md  CONTRIBUTING.md  CONVERSATION_1_RESOLUTION_MAP.html  CONVERSATION_2_RESOLUTION_MAP.html  CONVERSATION_TASKS_FULL.html  CONVERSATION_TASKS_FULL_2.html  COUPLING_RECHECK.md  COVERAGE_EXPANSION_TASK.md  COVERAGE_GAPS.txt  COVERAGE_GAPS_2.md  COVERAGE_TEST_DESIGNS.md  CRITICALITY_METRICS_GAP.md  CRITICALITY_REVERIFY.md  CRITICALITY_REVERIFY_2.md  (+91 more)
clients/bevy-ref/: Cargo.toml  README.md
clients/bevy-ref/src/: animation.rs  atmosphere.rs  audio.rs  bevy_render.rs  camera.rs  civ_history.rs  crash_handler.rs  decorations.rs  dev_capture.rs  diplomacy_ui.rs  disaster_tools.rs  emergence_dashboard.rs  entity_inspector.rs  era_hud.rs  event_feed.rs  faction_hud.rs  frame_budget.rs  game_laws.rs  game_over_ui.rs  game_ui.rs  gameplay_hud.rs  gltf_models.rs  god_actions.rs  god_panel.rs  godtools.rs  gpu_features.rs  graphics_settings.rs  holo_minimap.rs  holocron_panel.rs  hud_panels.rs  hud_state.rs  info_views.rs  inspect.rs  lib.rs  lighting_gi.rs  live_attach.rs  live_focus.rs  live_ground.rs  live_minimap.rs  live_pick.rs  (+40 more)
clients/bevy-ref/tests/: requirements_bdd.rs  settings_bdd.rs  world_size_bdd.rs
crates/agents/: Cargo.toml
crates/agents/src/: architecture.rs  cluster.rs  culture.rs  daily_path.rs  diplomacy.rs  language.rs  lib.rs  psyche.rs  social.rs
crates/audio/: Cargo.toml  README.md
crates/audio/src/: ambient.rs  bus.rs  ducking.rs  lib.rs  mix.rs  mood.rs  sfx.rs  triggers.rs  ui_sound.rs
crates/civ-emergence-metrics/: Cargo.toml
crates/civ-emergence-metrics/benches/: analyzer_bench.rs
crates/civ-emergence-metrics/src/: branching.rs  criticality.rs  dashboard.rs  lib.rs  mutual_information.rs  power_law.rs  sample_snapshot.rs  shannon.rs  structure.rs
crates/civ-emergence-metrics/tests/: emergence_coverage.rs  emergence_dashboard_derived.rs  emergence_quality.rs
crates/civ-institutions/: Cargo.toml
crates/civ-institutions/src/: lib.rs
crates/civ-traffic/: Cargo.toml
crates/civ-traffic/benches/: transformer_bench.rs
crates/civ-traffic/src/: grid.rs  lane.rs  lib.rs
crates/civ-traffic/tests/: traffic_coverage.rs
crates/civis-cli/: Cargo.toml
crates/civis-cli/src/: analyzer_cli.rs  build.rs  census.rs  config.rs  dump.rs  lib.rs  main.rs  mcp_client.rs  pixels.rs  populated_boot.rs  proc.rs  screenshot.rs  trace_cli.rs  verify.rs
crates/civis-cli/tests/: cli_coverage.rs
crates/civis-mcp/: Cargo.toml
crates/civis-mcp/src/: error.rs  lib.rs  main.rs  server.rs
crates/civis-mcp/tests/: mcp_coverage.rs  mcp_integration.rs
crates/civlab-sdk/: Cargo.toml  README.md
crates/civlab-sdk/src/: building.rs  lib.rs  material.rs  policy.rs  registry.rs
crates/civlab-sdk/tests/: civlab_coverage.rs  sdk_coverage.rs
crates/diffusion/: Cargo.toml  README.md
crates/diffusion/src/: lib.rs
crates/diplomacy/: Cargo.toml
crates/diplomacy/src/: emergent.rs  lib.rs
crates/economy/: Cargo.toml
crates/economy/src/: allocation.rs  allocator.rs  chains.rs  error.rs  extraction.rs  institution.rs  lib.rs  market.rs  prices.rs  shocks.rs  specialization.rs  stocks.rs  trade.rs
crates/economy/tests/: economy_coverage.rs  fr_matrix_batch7.rs
crates/emergence-migration/: Cargo.toml
crates/emergence-migration/src/: lib.rs
crates/emergence-oracle/: Cargo.toml
crates/emergence-oracle/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: audio.rs  building_emergence.rs  building_layouts.rs  ca_budget.rs  command_queue.rs  conditions.rs  culture.rs  disasters.rs  dormant_phases.rs  emergence.rs  emergence_metrics.rs  engine.rs  era.rs  faction_decisions.rs  gameplay.rs  godtools.rs  governance.rs  hash_chain.rs  history.rs  institution.rs  io.rs  language.rs  law.rs  lib.rs  lod.rs  metrics.rs  perf.rs  phase_migration.rs  phenotype_init.rs  policy.rs  psyche_behavior.rs  religion.rs  replay.rs  replay_format.rs  research.rs  route.rs  save.rs  save_bundle.rs  scenario.rs  settlement.rs  (+4 more)
crates/engine/tests/: ca_tick_budget.rs  end_to_end_tick.rs  fr_civ_arch_emergence.rs  fr_civ_gov_cohesion.rs  fr_civ_gov_institutions.rs  fr_civ_gov_mood.rs  fr_civ_gov_stratification.rs  fr_civ_religion_007_phase_belief.rs  fr_civ_unrest_001.rs  fr_core_004.rs  fr_emergence_anti_theater.rs  fr_emergence_quality.rs  fr_emg_oracle.rs  fr_lang_depth.rs  fr_law.rs  fr_matrix_batch1.rs  fr_matrix_batch3.rs  fr_psyche_behavior.rs  fr_religion_emergence.rs  fr_trade_emergent_routes.rs  invariants_proptest.rs  military_coverage.rs  n13_coverage.rs  n5_n6_n8_coverage.rs  n_series_coverage.rs  tick_budget.rs  uncovered_coverage.rs
crates/genetics/: Cargo.toml  README.md
crates/genetics/src/: lib.rs  seeds.rs  sentience.rs
crates/hud/: Cargo.toml
crates/hud/src/: tile_inspector.rs  tokens.rs  top_bar.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: cache.rs  error.rs  lib.rs  minio.rs  nats.rs  pg.rs
crates/infra/tests/: pg_integration.rs
crates/laws/: Cargo.toml
crates/laws/laws/: default.ron
crates/laws/src/: lib.rs
crates/legends/: Cargo.toml
crates/legends/src/: config.rs  graph.rs  ids.rs  lib.rs  model.rs  query.rs  rumor.rs  worker.rs
crates/legends/tests/: fr_legends_auto_generation.rs  fr_legends_completion.rs  legends_coverage.rs  legends_coverage_ext.rs  (+2 more)
crates/mod-host/: Cargo.toml
crates/needs/: Cargo.toml
crates/pheno-tracing/: Cargo.toml
crates/physics-substrate/: Cargo.toml
crates/planet/: Cargo.toml  README.md
crates/powers/: Cargo.toml
crates/protocol-3d/: Cargo.toml
crates/research/: Cargo.toml  README.md
(+6187 files in other folders)
