[package]
name = "civ-bevy-ref"
description = "Civis Bevy reference 3D client: CI + determinism + agent-driven daily-driver renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
autobins = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "civ-bevy-ref"
path = "src/main.rs"

[dependencies]
civ-agents = { path = "../../crates/agents" }
civ-engine = { path = "../../crates/engine", optional = true }
civ-voxel = { path = "../../crates/voxel" }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }

# Bevy is an optional dep behind the `bevy` feature so the default workspace
# build stays fast. Enable with `cargo run -p civ-bevy-ref --features bevy`.
bevy = { version = "0.18", optional = true }
bevy_egui = { version = "0.39", optional = true }
wgpu = { version = "27", optional = true }
# Optional physics (not wired yet); keep out of default `bevy` feature to avoid wgpu version clashes.
bevy_rapier3d = { version = "0.34", optional = true }
# PART A — bevy_atmosphere (real physically-based sky), gated behind the
# `atmosphere` feature. NOTE (checked 2026-05-29 via crates.io): the latest
# published bevy_atmosphere is 0.13.0 (2025-05-06) which depends on `bevy ^0.16`
# — there is NO release compatible with Bevy 0.18 yet. The dep line + feature
# below are therefore left COMMENTED so the manifest stays parseable and the
# existing procedural skybox dome (src/skybox.rs + src/atmosphere.rs) remains
# the sky. Uncomment the dep + the `atmosphere` feature once an 0.18-compatible
# bevy_atmosphere (expected ~0.14) ships, then wire `AtmospherePlugin` per the
# note in src/gltf_models.rs.
# bevy_atmosphere = { version = "0.14", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true, default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = { version = "0.3", optional = true }
serde_json = { version = "1", optional = true }
civ-protocol-3d = { path = "../../crates/protocol-3d", optional = true }

[dev-dependencies]
civ-protocol-3d = { path = "../../crates/protocol-3d" }
serde_json = "1"

[features]
default = []
bevy = [
    "dep:bevy",
    "dep:wgpu",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:serde_json",
    "dep:civ-protocol-3d",
    "dep:civ-engine",
    "dep:rand",
    "dep:rand_chacha",
]
egui = ["bevy", "dep:bevy_egui"]
rapier = ["bevy", "dep:bevy_rapier3d"]
# PART B — CC0 GLTF model loading (src/gltf_models.rs). OFF by default: when
# disabled (or when assets/models/*.glb are absent) callers fall back to the
# procedural primitives (capsule civilians / cuboid buildings / cone trees).
models = ["bevy"]
# PART A — real sky. Currently a no-op placeholder feature: NO 0.18-compatible
# bevy_atmosphere exists yet (see the commented dep above). When one ships,
# uncomment its dep and change this to `atmosphere = ["bevy", "dep:bevy_atmosphere"]`.
atmosphere = ["bevy"]
solari = [
    "bevy",
    "bevy/bevy_solari",
]

[[bin]]
name = "civ-bevy-window"
path = "src/bin/bevy_window.rs"
required-features = ["bevy"]

[[bin]]
name = "civ-standalone"
path = "src/bin/standalone.rs"
required-features = ["bevy", "egui"]

[[bin]]
name = "civ-native-hal-probe"
path = "src/bin/native_hal_probe.rs"
required-features = ["bevy"]
