[package]
name = "civ-agents"
description = "Civilian agent ECS components + LOD tick + per-civilian wardrobe/tools state"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
rand = "0.8.6"
rand_chacha = "0.3"
civ-engine = { path = "../engine" }
civ-species = { path = "../species" }
civ-genetics = { path = "../genetics" }
civ-voxel = { path = "../voxel" }
civ-diffusion = { path = "../diffusion" }
hecs = "0.10"

[dev-dependencies]
proptest = "1.4"
