[package]
name = "civ-emergence-metrics"
description = "Weak-emergence / criticality metrics for the Civis godgame: power-law fit, Shannon entropy, structure count, novelty rate, coupling MI, branching ratio. Pure deterministic math; no I/O."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Intentionally zero non-workspace deps. The crate is pure math: histograms,
# connected-components, linear fits, and O(1) per-sample work. If a future PR
# needs a real dep (e.g. a fast KS-distance routine) it must justify it in
# the PR body.
