[package]
name = "civ-institutions"
description = "Civic institutions (Temple / Garrison / future) — population-gated spawn + level-up + one-shot event semantics for Civis"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]