[package]
name = "civis-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rmcp = { version = "0.9", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
civis-cli = { path = "../civis-cli" }

[lib]
path = "src/lib.rs"

