[package]
name = "civ-diffusion"
description = "Tech adoption S-curve engine (Bass/Rogers) driving wardrobe/tools propagation"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
civ-agents = { path = "../agents" }

[dev-dependencies]
proptest = "1.4"
