[package]
name = "civ-diplomacy"
description = "Diplomacy substrate — pairwise Relation graph with scalar standing, per-tick decay, and threshold-crossing events (FR-CIV-DIPLO-001 partial substrate slice; civ-006/civ-007 scope)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
civ-legends = { path = "../legends" }

[dev-dependencies]
proptest = "1.11"
