[package]
name = "civ-economy"
description = "CIV-0100 economy layer: ledger, allocation, conservation (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
proptest = "1.4"
