[package]
name = "civ-economy"
description = "CIV-0100 economy layer: ledger, allocation, conservation (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
proptest = "1.11"
