[package]
name = "civ-emergence-migration"
description = "Population migration engine: stress-driven cluster flows with cultural blending and conservation guarantees"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.6"
rand_chacha = "0.3"
