[package]
name = "emergence-oracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oracle_report"
path = "src/bin/oracle_report.rs"

[dependencies]
civ-engine = { path = "../engine" }
civ-agents = { path = "../agents" }
civ-emergence-migration = { path = "../emergence-migration" }
rand = "0.8.6"
rand_chacha = "0.3"
