[package]
name = "civ-engine"
version.workspace = true
edition.workspace = true

[dependencies]
# Random number generation with seeding
rand = "0.8"
rand_chacha = "0.3"

# Entity Component System (ECS)
hecs = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }
pheno-core = { workspace = true }
pheno-db = { workspace = true }

[dev-dependencies]
proptest = "1.4"
tempfile = "3"
