[package]
name = "civ-engine"
description = "Deterministic simulation engine with ECS architecture and fixed-point arithmetic"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Random number generation with seeding
rand = "0.8.6"
rand_chacha = "0.3"

# Entity Component System (ECS)
hecs = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Civis 3D voxel substrate (sibling Phenotype-org repo via civ-voxel).
civ-voxel = { path = "../voxel" }

# Planet and tactics foundations.
civ-planet = { path = "../planet" }
civ-tactics = { path = "../tactics" }

[dev-dependencies]
proptest = "1.4"
tempfile = "3"
