[package]
name = "civ-engine"
description = "Deterministic simulation engine with ECS architecture and fixed-point arithmetic"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Random number generation with seeding
rand = "0.8.6"
rand_chacha = "0.3"

# Entity Component System (ECS)
hecs = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_path_to_error = "0.1"
ron = "0.8"
blake3 = "1"
sha2 = "0.10"
thiserror = "1"
tar = "0.4"
tempfile = "3"
zstd = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Civis 3D voxel substrate (sibling Phenotype-org repo via civ-voxel).
civ-agents = { path = "../agents" }
civ-build = { path = "../build" }
civ-diffusion = { path = "../diffusion" }
civ-voxel = { path = "../voxel" }

# Planet and tactics foundations.
civ-planet = { path = "../planet" }
civ-tactics = { path = "../tactics" }

# Economy layer (CIV-0100); engine syncs joule budget each tick.
civ-economy = { path = "../economy" }

# Mod manifest host stub (CIV-0700 Sprint D).
civ-mod-host = { path = "../mod-host" }

[dev-dependencies]
civ-economy = { path = "../economy" }
proptest = "1.4"
tempfile = "3"
