[package]
name = "civ-genetics"
description = "Algorithmic DNA, mutation/recombination, fitness, speciation thresholds"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
rand = "0.8.6"
rand_chacha = "0.3"

[dev-dependencies]
proptest = "1.4"
