[package]
name = "civ-i18n"
version = "0.1.0"
edition = "2021"
description = "Internationalization & localization: string bundles, locale detection, tr!() macro"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[lib]
name = "civ_i18n"
path = "src/lib.rs"

[[test]]
name = "i18n_tests"
path = "tests/i18n_tests.rs"
