[package]
name = "civ-laws"
description = "Physics-law DB: versioned RON schema, conservation laws, futurism extension rules"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
ron = "0.8"

[dev-dependencies]
proptest = "1.4"
