[package]
name = "civ-legends"
description = "Emergent-history saga-graph engine: a petgraph StableDiGraph of measured-significant entities/events + causal edges over the sim event stream, with a read-only query API for the inspector + AI narrator (FR-CIV-LEGENDS-*)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "civ_legends"
path = "src/lib.rs"

[dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1", features = ["serde"] }
blake3 = "1"
tracing = "0.1"

[dev-dependencies]
