[package]
name = "civ-needs"
description = "Emergent life-sim needs model: per-agent needs decay, sickness, and death thresholds (deterministic, seeded)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.6"
rand_chacha = "0.3"
civ-genetics = { path = "../genetics" }

[dev-dependencies]
proptest = "1.11"
