[package]
name = "pheno-tracing"
description = "Shared Civis tracing initialization"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = { version = "0.24", optional = true }
opentelemetry = { version = "0.23", optional = true }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.16", features = ["tonic"], optional = true }

[features]
default = []
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
