[package]
name = "civ-physics-substrate"
description = "Shared physics-field substrate (T, M, E, F, P, B) — the only public write path between emergent layers. Doctrinal anchor for FR-PHYS-substrate."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
glam = "0.30.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"

[dev-dependencies]