[package]
name = "civ-planet"
description = "Single-planet geology + weather + day/night + moon tides; deterministic"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
civ-engine = { path = "../engine" }

[dev-dependencies]
proptest = "1.4"
