[package]
name = "civ-planet"
description = "Single-planet geology + weather + day/night + moon tides; deterministic"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
# civ-engine is intentionally NOT a dep — civ-engine depends on civ-planet,
# so civ-planet must stay foundational to avoid a workspace cycle.

[dev-dependencies]
proptest = "1.11"
