[package]
name = "civ-protocol-3d"
description = "WebSocket binary protocol extensions for voxel deltas, building diffs, agent appearance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
tracing = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["rt"] }
civ-voxel = { path = "../voxel" }
civ-build = { path = "../build" }
civ-agents = { path = "../agents" }
civ-planet = { path = "../planet" }

[dev-dependencies]
proptest = "1.4"
